mdmCeneveo/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Marketing - Packaging</fullName>
        <description>This support process is for Marketing - Packaging.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_CAses__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anticipated_cost_of_this_production__c</fullName>
        <label>Anticipated cost of this production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <inlineHelpText>Enter your division.</inlineHelpText>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels &amp; Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_capability_or_is_R_D_required__c</fullName>
        <label>Existing capability or is R&amp;D required?</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_the_project_been_estimated__c</fullName>
        <label>Has the project been estimated?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Action_Due__c</fullName>
        <label>Next Action Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origination_Date__c</fullName>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <picklist>
            <picklistValues>
                <fullName>Bensenville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicopee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottdale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Due_Date__c</fullName>
        <label>Project Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_approved_by_Manager__c</fullName>
        <label>Project approved by Manager?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_D_Type__c</fullName>
        <label>R&amp;D Type</label>
        <picklist>
            <picklistValues>
                <fullName>Jacksonville R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resoultion__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__ADM_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A connection to the Agile Accelerator Work object used to track Bugs, Investigations and User Stories</description>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>AgileAcceleratorCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Cases_All_Open</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Everything</filterScope>
        <label>Cases - All Open</label>
    </listViews>
    <listViews>
        <fullName>Cases_All_Untouched</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Untouched</value>
        </filters>
        <label>Cases - All Untouched</label>
    </listViews>
    <listViews>
        <fullName>Cases_My_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Cases - My Closed</label>
    </listViews>
    <listViews>
        <fullName>Cases_My_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold,Escalated,Untouched,In Progress</value>
        </filters>
        <label>Cases - My Open</label>
    </listViews>
    <listViews>
        <fullName>Cases_R_D_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Cases - R&amp;D Case</label>
        <queue>R_D_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Packaging_R_D_Cases</fullName>
        <active>true</active>
        <businessProcess>Marketing - Packaging</businessProcess>
        <description>This case type is used for all Packaging R&amp;D Cases</description>
        <label>Packaging R&amp;D Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Cases</fullName>
        <active>true</active>
        <businessProcess>Marketing - Packaging</businessProcess>
        <description>This case type is used for all Salesforce related cases</description>
        <label>Salesforce Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wholesale_Case</fullName>
        <active>true</active>
        <businessProcess>Marketing - Packaging</businessProcess>
        <description>This case type is used for documenting Wholesale cases</description>
        <label>Wholesale Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3D_Imagery</fullName>
        <active>true</active>
        <businessProcess>Marketing - Packaging</businessProcess>
        <description>This case type is used for Packaging Custom Marketing Collateral as well as 3D Imagery Requests and Assistance</description>
        <label>Packaging Custom Marketing Collateral</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>